--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "mocha server/**/*.test.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\" "
   },
   "engines": {
@@ -16,9 +16,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "mongodb": "^3.1.4",
-    "mongoose": "^5.4.2"
-
+    "mongoose": "^5.4.2",
+    "vue": "^2.5.21"
   },
   "devDependencies": {
     "expect": "^23.6.0",
